Cosmetic fixes to the issue dialog: removed unnecessary margins, added alignment, fixed relative dialog height (#4550).

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -30,7 +30,7 @@
 
   .dialog-header {
     .clearfix();
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 
     h2 {
       line-height: 0.8em;
@@ -102,6 +102,9 @@
     &.cancel-button-bottom {
       .button();
       padding: 4px 19px 4px 19px;
+    }
+
+    + .cancel-button-bottom {
       margin-left: 11px;
     }
   }
