--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/dialog/dependant-items-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/dialog/dependant-items-dialog.less
@@ -53,21 +53,26 @@
 
   .sub-title {
     margin-top: 20px;
+    margin-bottom: -10px;
 
     &:empty {
       display: none;
     }
   }
 
-  .publish-dialog-dependant-list:not(.readonly) {
-    .browse-selection-item {
-      .remove {
-        display: block;
+  .publish-dialog-dependant-list {
+
+    &:not(.readonly) {
+      .browse-selection-item {
+        .remove {
+          display: block;
+        }
       }
     }
   }
 
   .publish-dialog-item-list {
+    padding: 5px 0;
 
     &:not(.readonly) {
       .browse-selection-item {
@@ -77,7 +82,12 @@
       }
     }
 
+    &:not(.contains-toggleable) + .dependants > .publish-dialog-dependant-list {
+      padding-left: 5px;
+    }
+
     .browse-selection-item {
+      padding: 6px 0;
       &.removable {
         .remove {
           color: @admin-dark-gray;
@@ -153,12 +163,11 @@
     .dependants {
       display: none;
 
-      .dependants-header {
-        margin: 20px 0 10px 0;
+      .dependants-header:not(:empty) {
+        margin: 10px 0;
       }
 
       .dependant-list {
-        margin-top: 10px;
 
         h6 {
           margin-bottom: 5px;
