--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
@@ -1,10 +1,10 @@
 .issue-details-dialog {
-
+  max-height: none;
   @toggler-width: 35px;
 
   .dialog-content {
     padding: 5px 0px;
-    max-height: 55vh;
+    max-height: 60vh;
     overflow-y: auto;
   }
 
