--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-dialog.less
@@ -1,9 +1,9 @@
 .issue-dialog {
-
+  max-height: none;
   @toggler-width: 35px;
 
   .dialog-content {
-    max-height: 55vh;
+    max-height: 60vh;
     overflow-y: auto;
 
     .issue-dialog-form {
@@ -61,7 +61,6 @@
   .button-container {
 
     width: 100%;
-    padding-right: 10px;
     box-sizing: border-box;
 
     .back-action {
